# Parallel_Programing_Course

./: README.md
CUDA/: CMakeLists.txt  array_routines.cu  array_routines.h  cuda_one_file.cu  main.cu  minMaxKMeans.cu  minMaxKMeans.h  read_write_routines.cu  read_write_routines.h  sparseKMeans.cu  sparseKMeans.h  structs.h  updateCenters.cu  updateCenters.h  updateWeights.cu  updateWeights.h
OpenMP/: CMakeLists.txt  array_routines.c  array_routines.h  main.c  minMaxKMeans.c  minMaxKMeans.h  openmp_one_file.c  read_write_routines.c  read_write_routines.h  sparseKMeans.c  sparseKMeans.h  structs.h  updateCenters.c  updateCenters.h  updateWeights.c  updateWeights.h
Sequential/: CMakeLists.txt  main.c  matrix_array_routines.c  matrix_array_routines.h  minMaxKMeans.c  minMaxKMeans.h  read_write_routines.c  read_write_routines.h  sequential_one_file.c  sparseKMeans.c  sparseKMeans.h  structs.h  updateCenters.c  updateCenters.h  updateWeights.c  updateWeights.h
